feat(qwp): add QuestDB facade with pooled Sender and Query APIs (#28)